--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	@@include('menu/menu.html')
+	@@include('ul-before/ul-before.html')
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
